--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "uuid": "b2ffb650-0b97-4df4-ba74-7c4fb8fe265f"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "18.x",
+    "npm": "9.x"
   },
   "license": "MIT"
 }
